# ecogame-uz

./: .env.example  .gitignore  CLAUDE.md  PROMPT.md  README.md  deploy.sh  docker-compose.coolify.yml  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  generate_questions_fixture.py  pyproject.toml
backend/.claude/: ralph-loop.local.md
backend/apps/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_player_is_anonymous_player_player_session_key.py  0003_add_google_id.py
backend/apps/accounts/tests/: test_api.py  test_models.py
backend/apps/education/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/education/migrations/: 0001_initial.py
backend/apps/education/tests/: test_api.py  test_models.py
backend/apps/game/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/game/migrations/: 0001_initial.py  0002_ecoaction_cost_gameprogress_world_state.py  0003_quiz_models.py
backend/apps/game/tests/: test_api.py  test_models.py  test_services.py
backend/apps/leaderboard/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/leaderboard/migrations/: 0001_initial.py
backend/apps/leaderboard/tests/: test_api.py
backend/config/: urls.py
backend/config/settings/: base.py  dev.py  prod.py
backend/fixtures/: achievements.json  eco_actions.json  eco_facts.json  educational_content.json  levels.json  questions.json  quiz_achievements.json
frontend/: Dockerfile  (+5 more)
(+94 files in other folders)
