[project]
name = "backend"
version = "0.1.0"
description = "EcoGame — Экологическая игра-симулятор (backend)"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "djangorestframework>=3.15",
    "django-unfold>=0.40",
    "djangorestframework-simplejwt>=5.3",
    "django-cors-headers>=4.4",
    "django-environ>=0.11",
    "gunicorn>=22.0",
    "psycopg2-binary>=2.9",
    "Pillow>=10.4",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-django>=4.8",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
